<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ls="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/til_search_patient"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_search_patient"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/search_for_patient"
                    android:inputType="text"
                    android:drawablePadding="10dp"
                    android:imeOptions="actionSearch"
                    android:drawableRight="@drawable/ic_arrow_drop_down"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_patient_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:text="@string/patient_details"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_salutation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_salutation"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/salutation"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/middle_name"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:digits="0123456789"
                    android:maxLength="10"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down"
                    android:editable="false"
                    android:hint="@string/dob"
                    android:nextFocusForward="@+id/tv_appointment_details"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/gender_with_star"
                    android:inputType="text"
                    android:drawablePadding="10dp"
                    android:imeOptions="actionSearch"
                    android:drawableRight="@drawable/ic_arrow_drop_down"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_referred_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_referred_by"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/referred_by"
                    android:inputType="text"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_appointment_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:text="@string/appointment_details"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_clinic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_clinic"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/clinic"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_arrow_drop_down"
                    android:editable="false"
                    android:hint="@string/date"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_time"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/time"
                    android:inputType="text"
                    android:digits="0123456789ampmAMPM: "
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_type"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/type"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:inputType="text"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_appointment_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_appointment_for"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/appointment_for"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_encounter_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:text="@string/encounter_details"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_select_episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_select_episode"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/enter_select_episode"
                    android:inputType="text"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_select_encounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.nerve24.doctor.Utility.InstantAutoCompleteTextView
                    android:id="@+id/atv_select_encounter"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/enter_encounter"
                    android:inputType="text"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
