<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:id="@+id/tv_refer_to_pharmacy"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:drawableRight="@drawable/ic_action_next"
      android:text="@string/refer_to_pharmacy"
      android:gravity="center_vertical"
      android:paddingLeft="20dp"
      android:textSize="20sp"
      android:paddingRight="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gra"/>

    <TextView
        android:id="@+id/tv_refer_test"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableRight="@drawable/ic_action_next"
        android:text="@string/refer_tests"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:paddingRight="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gra"/>

    <TextView
        android:id="@+id/tv_refer_to_doctor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableRight="@drawable/ic_action_next"
        android:text="@string/refer_to_doctor"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:paddingRight="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gra"/>

    <TextView
        android:id="@+id/tv_refer_to_hospital"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableRight="@drawable/ic_action_next"
        android:text="@string/refer_to_hospital"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:paddingRight="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gra"/>


</LinearLayout>